force-app/main/default/objects/APS_Mid_Year_Survey__c/APS_Mid_Year_Survey__c.object-meta.xml
<CustomObject>
    <label>APS Mid Year Survey</label>
    <nameField>
        <displayFormat>AS-{00000000}</displayFormat>
        <label>APS Mid Year Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APS Mid Year Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>