force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/ADDITIONAL_COMMENTS_OR_QUESTIONS__c.field-meta.xml
<CustomField>
    <fullName>ADDITIONAL_COMMENTS_OR_QUESTIONS__c</fullName>
    <label>ADDITIONAL COMMENTS OR QUESTIONS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>