force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Aps_Organization__c.field-meta.xml
<CustomField>
    <fullName>Aps_Organization__c</fullName>
    <label>Aps Organization</label>
    <length>80</length>
    <type>Text</type>
</CustomField>