force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/APS_Other_Period_Products__c.field-meta.xml
<CustomField>
    <fullName>APS_Other_Period_Products__c</fullName>
    <label>APS Other Period Product Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Other_Period_Products</valueSetName>
    </valueSet>
</CustomField>