force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/APS_Program_Primary_Contact_Email_Addres__c.field-meta.xml
<CustomField>
    <fullName>APS_Program_Primary_Contact_Email_Addres__c</fullName>
    <label>APS Program Primary Contact Email Addres</label>
    <length>50</length>
    <type>Text</type>
</CustomField>