force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/APS_Year__c.field-meta.xml
<CustomField>
    <fullName>APS_Year__c</fullName>
    <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
    <label>APS Year</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>