force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Avg_Number_People_Served_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Avg_Number_People_Served_Monthly__c</fullName>
    <label>Avg Number People Served Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>