force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Career_technical_training__c.field-meta.xml
<CustomField>
    <fullName>Career_technical_training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Career technical training</label>
    <type>Checkbox</type>
</CustomField>