force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Child_abuse_resource_center__c.field-meta.xml
<CustomField>
    <fullName>Child_abuse_resource_center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child abuse resource center</label>
    <type>Checkbox</type>
</CustomField>