force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Church_outreach_ministry__c.field-meta.xml
<CustomField>
    <fullName>Church_outreach_ministry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Church outreach ministry</label>
    <type>Checkbox</type>
</CustomField>