force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/College_and_Universities__c.field-meta.xml
<CustomField>
    <fullName>College_and_Universities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College and Universities</label>
    <type>Checkbox</type>
</CustomField>