force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Community_development_corporation__c.field-meta.xml
<CustomField>
    <fullName>Community_development_corporation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community development corporation</label>
    <type>Checkbox</type>
</CustomField>