force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Community_health_program__c.field-meta.xml
<CustomField>
    <fullName>Community_health_program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community health program</label>
    <type>Checkbox</type>
</CustomField>