force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Community_outreach_services__c.field-meta.xml
<CustomField>
    <fullName>Community_outreach_services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Community outreach services</label>
    <type>Checkbox</type>
</CustomField>