force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Correctional_Facilities_Jail_Prison__c.field-meta.xml
<CustomField>
    <fullName>Correctional_Facilities_Jail_Prison__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Correctional Facilities / Jail / Prison</label>
    <type>Checkbox</type>
</CustomField>