force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Crisis_Disaster_services__c.field-meta.xml
<CustomField>
    <fullName>Crisis_Disaster_services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crisis/Disaster services</label>
    <type>Checkbox</type>
</CustomField>