force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Developmental_disabilities_program__c.field-meta.xml
<CustomField>
    <fullName>Developmental_disabilities_program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Developmental disabilities program</label>
    <type>Checkbox</type>
</CustomField>