force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Domestic_violence_shelter__c.field-meta.xml
<CustomField>
    <fullName>Domestic_violence_shelter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domestic violence shelter</label>
    <type>Checkbox</type>
</CustomField>