force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Early_Childhood_Education_Childcare__c.field-meta.xml
<CustomField>
    <fullName>Early_Childhood_Education_Childcare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Childhood Education / Childcare</label>
    <type>Checkbox</type>
</CustomField>