force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Early_childhood_services__c.field-meta.xml
<CustomField>
    <fullName>Early_childhood_services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early childhood services</label>
    <type>Checkbox</type>
</CustomField>