force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Education_program__c.field-meta.xml
<CustomField>
    <fullName>Education_program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Education program</label>
    <type>Checkbox</type>
</CustomField>