force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <label>Email Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>