force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Family_resource_center__c.field-meta.xml
<CustomField>
    <fullName>Family_resource_center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family resource center</label>
    <type>Checkbox</type>
</CustomField>