force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Food_bank_pantry__c.field-meta.xml
<CustomField>
    <fullName>Food_bank_pantry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food bank/pantry</label>
    <type>Checkbox</type>
</CustomField>