force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Foster_Program__c.field-meta.xml
<CustomField>
    <fullName>Foster_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foster Program</label>
    <type>Checkbox</type>
</CustomField>