force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Government_Agency_Affiliate__c.field-meta.xml
<CustomField>
    <fullName>Government_Agency_Affiliate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Government Agency/Affiliate</label>
    <type>Checkbox</type>
</CustomField>