force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Head_Start_Early_Head_Start__c.field-meta.xml
<CustomField>
    <fullName>Head_Start_Early_Head_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Head Start/Early Head Start</label>
    <type>Checkbox</type>
</CustomField>