force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Home_visits__c.field-meta.xml
<CustomField>
    <fullName>Home_visits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home visits</label>
    <type>Checkbox</type>
</CustomField>