force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Homeless_resource_center__c.field-meta.xml
<CustomField>
    <fullName>Homeless_resource_center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homeless resource center</label>
    <type>Checkbox</type>
</CustomField>