force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospital</label>
    <type>Checkbox</type>
</CustomField>