force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Infant_Child_Pantry_Closet__c.field-meta.xml
<CustomField>
    <fullName>Infant_Child_Pantry_Closet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infant/Child Pantry/Closet</label>
    <type>Checkbox</type>
</CustomField>