force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Library__c.field-meta.xml
<CustomField>
    <fullName>Library__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Library</label>
    <type>Checkbox</type>
</CustomField>