force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <label>Member ID</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>