force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/NEWS_MEDIA_COVERAGE__c.field-meta.xml
<CustomField>
    <fullName>NEWS_MEDIA_COVERAGE__c</fullName>
    <label>NEWS MEDIA COVERAGE</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>