force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Number_of_Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Counties_Served__c</fullName>
    <label>Number of Counties Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>