force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Other_Partner_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Other_Partner_Agencies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Partner Agencies</label>
    <type>Checkbox</type>
</CustomField>