force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/PERIOD_ADVOCACY__c.field-meta.xml
<CustomField>
    <fullName>PERIOD_ADVOCACY__c</fullName>
    <label>PERIOD ADVOCACY</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>