force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Period_Supply_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Period_Supply_Program_Name__c</fullName>
    <label>Period Supply Program Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>