force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Police_Station__c.field-meta.xml
<CustomField>
    <fullName>Police_Station__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Police Station</label>
    <type>Checkbox</type>
</CustomField>