force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Preschool__c.field-meta.xml
<CustomField>
    <fullName>Preschool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preschool</label>
    <type>Checkbox</type>
</CustomField>