force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Review_Note__c.field-meta.xml
<CustomField>
    <fullName>Review_Note__c</fullName>
    <inlineHelpText>Note field for follow up or use of data</inlineHelpText>
    <label>Review Note</label>
    <type>TextArea</type>
</CustomField>