force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/School_Middle_School__c.field-meta.xml
<CustomField>
    <fullName>School_Middle_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>School - Middle School</label>
    <type>Checkbox</type>
</CustomField>