force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Senior_Center__c.field-meta.xml
<CustomField>
    <fullName>Senior_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Center</label>
    <type>Checkbox</type>
</CustomField>