force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Six_Month_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Six_Month_Outlook__c</fullName>
    <label>Six Month Outlook</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>