force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Survey_submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_submit_Date__c</fullName>
    <label>Survey submit Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>