force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/TESTIMONIAL_AND_PHOTOS__c.field-meta.xml
<CustomField>
    <fullName>TESTIMONIAL_AND_PHOTOS__c</fullName>
    <label>TESTIMONIAL AND PHOTOS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>