force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Total_Number_of_Pads_Distributed_between__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Pads_Distributed_between__c</fullName>
    <label>Total Number of Pads Distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>