force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Total_Number_of_Tampons_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Tampons_Distributed__c</fullName>
    <label>Total Number of Tampons Distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>