force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Total_Period_Productsd_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Total_Period_Productsd_Distributed__c</fullName>
    <formula>Total_Number_of_Liners_Distributed__c  +  Total_Number_of_Pads_Distributed_between__c  +  Total_Number_of_Tampons_Distributed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Period Products Distributed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>