force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Treatment_clinic__c.field-meta.xml
<CustomField>
    <fullName>Treatment_clinic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Treatment clinic</label>
    <type>Checkbox</type>
</CustomField>