force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Two_Year_College__c.field-meta.xml
<CustomField>
    <fullName>Two_Year_College__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two-Year College</label>
    <type>Checkbox</type>
</CustomField>