force-app/main/default/objects/APS_Mid_Year_Survey__c/fields/Women_Infants_and_Children__c.field-meta.xml
<CustomField>
    <fullName>Women_Infants_and_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Women, Infants and Children</label>
    <type>Checkbox</type>
</CustomField>